# anomaly-detector

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-fit-on-train-only.md  0002-pca-ae-not-torch.md  0003-shift1-walkforward.md  0004-no-groundtruth-descriptive.md  0005-proxy-label.md
src/anomaly_detector/: __init__.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  data.py  plots.py  scan.py
src/anomaly_detector/backtest/: __init__.py  costs.py  stats.py  walk_forward.py
src/anomaly_detector/data_providers/: __init__.py  polygon.py
src/anomaly_detector/detectors/: __init__.py  autoencoder.py  iforest.py  result.py
src/anomaly_detector/evaluation/: __init__.py  agreement.py  dsr.py  overlay.py
src/anomaly_detector/features/: __init__.py  engineer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_walk_forward_run.py
tests/parity/: __init__.py  test_autoencoder_parity.py  test_iforest_parity.py  test_sklearn_parity.py
tests/property/: __init__.py  test_feature_invariants.py  test_invariants.py
tests/regression/: __init__.py  test_golden_anomalies.py  test_honest_headline.py
tests/unit/: __init__.py  test_agreement.py  test_cli.py  test_data.py  test_infra.py  test_overlay.py  test_plots.py  test_scan.py  test_smoke.py
